# census_ml_project

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
data/: README.md
docs/: ML_First_Milestone_Report.md
docs/KSSK - poster template/: Makefile  README.md  beamercolorthemekssk.sty  beamercolorthemepwr.sty  beamerthemegemini.sty  poster.fdb_latexmk  poster.fls  poster.tex
docs/KSSK - poster template/figures/: fig1.tikz  nested_cv.tikz
docs/stages/: stage0.md  stage1_2.md
notebooks/: README.md
reports/: README.md  dataset_summary.md  fairness_analysis_report.txt
reports/results/: KNN_fairness.csv  KNN_results.csv  LogisticRegression_fairness.csv  LogisticRegression_results.csv  NaiveBayes_fairness.csv  NaiveBayes_results.csv  RandomForest_fairness.csv  RandomForest_results.csv  XGBoost_fairness.csv  XGBoost_results.csv  experiment_results.txt  fairness_analysis_report.txt  fairness_comparison_summary.csv  statistical_comparison.txt
reports/tables/: categorical_cardinality.csv  missingness.csv  numeric_stats.csv  target_distribution.csv
src/census_ml/: __init__.py  config.py
src/census_ml/data/: __init__.py  dataset_variants.py  load_data.py
src/census_ml/eval/: __init__.py  nested_cv.py
src/census_ml/fairness/: __init__.py  fairness_analysis.py
src/census_ml/features/: __init__.py  preprocess.py
src/census_ml/utils/: __init__.py  logging.py
src/scripts/: generate_poster_figures.py  inspect_and_prepare.py  quick_check.py  run_experiments.py
tests/: __init__.py  test_data_loading.py  test_imports.py
